--- a/src/views/menu/views.hbs
+++ b/src/views/menu/views.hbs
@@ -18,19 +18,29 @@
                     </div>
                 </div>
             </form>
-            <form action="/menu/delete" method="post">
-                <div class="row col-12 mt-3">
-                    {{#each data}}
-                    <div class="form-group col-6">
-                        <p><strong>Nome: </strong>{{name}}</p>
-                        <p><strong>Descrição: </strong>{{desc}}</p>
-                        <p><strong>Valor do Produto: </strong>{{dinheiro value}}</p>
-                        <p><strong>Gasto para Produzir: </strong>{{dinheiro costProduce}}</p>
-                        <hr>
-                    </div>
-                    {{/each}}
+            <div class="row col-12 mt-3">
+                {{#each data}}
+                <div class="btn-group col-3 mt-4" role="group" aria-label="Basic example">
+                    <form action="/menu/editar" method="post">
+                    <input type="hidden" name="id" id="id" value="{{id}}">
+                        <button type="submit" class="btn btn-secondary"
+                            style="height: 50px; border-radius:5px; width:110%">Editar</button>
+                    </form>
+                    <form action="/menu/apagar" method="post">
+                    <input type="hidden" name="id" id="id" value="{{id}}">
+                        <button type="submit" class="btn btn-secondary ml-2"
+                            style="height: 50px; border-radius:5px; width:100%">Apagar</button>
+                    </form>
                 </div>
-            </form>
+                <div class="form-group col-9">                    
+                    <h6><strong>Nome: </strong>{{name}}</h6>
+                    <h6><strong>Descrição: </strong>{{desc}}</h6>
+                    <h6><strong>Valor do Produto: </strong>{{dinheiro value}}</h6>
+                    <h6><strong>Gasto para Produzir: </strong>{{dinheiro costProduce}}</h6>
+                    <hr>
+                </div>
+                {{/each}}
+            </div>
         </div>
     </div>
 </div>
