--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -22,17 +22,13 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Dados Empresa</a>
                     <ul class="sub-menu children dropdown-menu">                                              
-                        <li><i class="fa fa-bar-chart-o"></i><a href="/msg/views">Media de Pedidos</a></li>                                           
-                        <li><i class="fa fa-bar-chart-o"></i><a href="/msg/views">Media de Lucro</a></li>
-                        <li><i class="fa fa-money"></i><a href="/dados/lucros">Lucros</a></li>                                           
-                        <li><i class="fa fa-toggle-down"></i><a href="/msg/views">Gastos</a></li>                                                                   
+                        <li><i class="fa fa-money"></i><a href="/dados/lucros">Graficos da Empresa</a></li>                                                                                                    
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-desktop"></i>Visualizar Configurações</a>
-                    <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-table"></i><a href="/msg/views">Visualizar Msg</a></li>                    
+                    <ul class="sub-menu children dropdown-menu">                  
                         <li><i class="fa fa-table"></i><a href="/menu/views">Visualizar Menu</a></li>
                         <li><i class="fa fa-table"></i><a href="/clients/1">Visualizar Clientes</a></li>
                     </ul>
@@ -46,22 +42,13 @@
                         <li><i class="menu-icon fa fa-gear"></i><a href="/config/delivery">Configurar Delivery</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Thema</a></li>
                     </ul>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Icons</a>
-                    <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-fort-awesome"></i><a href="font-fontawesome.html">Font Awesome</a>
-                        </li>
-                        <li><i class="menu-icon ti-themify-logo"></i><a href="font-themify.html">Themefy Icons</a></li>
-                    </ul>
-                </li>
+                </li>                
                 <li>
                     <a href="widgets.html"> <i class="menu-icon ti-email"></i>Widgets </a>
                 </li>                
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> <i class="menu-icon fa fa-area-chart"></i>Maps</a>
+                        aria-expanded="false"> <i class="menu-icon fa fa-area-chart"></i>Marketing</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="menu-icon fa fa-map-o"></i><a href="maps-gmap.html">Google Maps</a></li>
                         <li><i class="menu-icon fa fa-street-view"></i><a href="maps-vector.html">Vector Maps</a></li>
