--- a/src/views/dados/lucros.hbs
+++ b/src/views/dados/lucros.hbs
@@ -2,6 +2,7 @@
     <div class="card">
         <div class="card-body">
             <h5>Margem de Lucro</h5>
+            <button onclick="showJSON()" class="btn btn-success mt-2">Atualiza</button>
             <hr>
             <div class="row col-12" style="height: 400px;">
                 <div class="form-group" style="height: 400px; width:100%">
