--- a/src/views/partials/_nav.hbs
+++ b/src/views/partials/_nav.hbs
@@ -1,54 +1,54 @@
-        <!-- Header-->
-        <header id="header" class="header">
+<!-- Header-->
+<header id="header" class="header">
 
-            <div class="header-menu">
+    <div class="header-menu">
 
-                <div class="col-sm-7">
-                    <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>
-                    <div class="header-left">
-                        
-                        <div class="dropdown for-message">
-                            <button class="btn btn-secondary dropdown-toggle" type="button"
-                                id="message"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <div id="DATE" class="col-12"></div>
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="message" id="DATE_One">
-                                
-                            </a>                                
-                            </div>
-                        </div>
+        <div class="col-sm-7">
+            <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>
+            <div class="header-left">
+
+                <div class="dropdown for-message">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="message" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <div id="DATE" class="col-12"></div>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="message" id="DATE_One">
+
+                        </a>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="col-sm-5">
-                    <div class="user-area dropdown float-right">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="user-avatar rounded-circle" src="/images/admin.jpg" alt="User Avatar" id="perfil">
-                        </a>
+        <div class="col-sm-5">
+            <div class="user-area dropdown float-right">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="user-avatar rounded-circle" src="/images/admin.jpg" alt="User Avatar" id="perfil">
+                </a>
 
-                        <div class="user-menu dropdown-menu">
-                            <a class="nav-link" href="/profile"><i class="fa fa-user"></i> Perfil</a>
+                <div class="user-menu dropdown-menu">
+                    <a class="nav-link" href="/profile"><i class="fa fa-user"></i> Perfil</a>
 
-                            <a class="nav-link" href="#"><i class="fa fa-user"></i> Notifications <span class="count">13</span></a>
+                    <a class="nav-link" href="#"><i class="fa fa-user"></i> Notifications <span
+                            class="count">13</span></a>
 
-                            <a class="nav-link" href="#"><i class="fa fa-cog"></i> Configurações</a>
+                    <a class="nav-link" href="#"><i class="fa fa-cog"></i> Configurações</a>
 
-                            <a class="nav-link" href="/logout"><i class="fa fa-power-off"></i> Sair</a>
-                        </div>
-                    </div>
-
-                  
-
+                    <a class="nav-link" href="/logout"><i class="fa fa-power-off"></i> Sair</a>
                 </div>
             </div>
 
-        </header><!-- /header -->
-        <!-- Header-->
-        <script>
-            const perfil = document.querySelector('#perfil')
-        perfil.addEventListener('click')
+
+
+        </div>
+    </div>
+
+</header><!-- /header -->
+<!-- Header-->
+<script>
+    const perfil = document.querySelector('#perfil')
+    perfil.addEventListener('click')
 
             //mudar class colocar no final da class show 
             //mudar aria-expanded="true"
-        </script>
+</script>
