--- a/src/views/menu/editar.hbs
+++ b/src/views/menu/editar.hbs
@@ -3,46 +3,43 @@
         <div class="card-body">
             <h5 class="text-center">Pagina para Editar</h5>
             <hr>
-            <div class="row">
-                <form action="/menu/register" method="post">
-                    <div class="form-group">
+            <form action="/menu/editando" method="post">
+                <div class="row col-12">
+                    <div class="form-group col-12">
                         {{#each result}}
-                        <div class="row col-12">
-                            <input type="text" name="name" value="{{class}}">
-                        </div>
+                        <input type="text" name="name" value="{{class}}" class="form-control">
                     </div>
-                    <div class="row col-12">
-                        <div class="form-group col-12">
-                            <label for="">Nome</label>
-                            <input type="text" name="name" id="name" class="form-control" value="{{name}}">
-                        </div>
+                </div>
+                <div class="row col-12">
+                    <div class="form-group col-12">
+                        <label for="">Nome</label>
+                        <input type="text" name="name" id="name" class="form-control" value="{{name}}">
                     </div>
-                    <div class="row col-12">
-                        <div class="form-group col-12">
-                            <label for="">Descrição</label>
-                            <textarea name="desc" id="desc" cols="30" rows="10" class="form-control">{{desc}}</textarea>
-                        </div>
+                </div>
+                <div class="row col-12">
+                    <div class="form-group col-12">
+                        <label for="">Descrição</label>
+                        <textarea name="desc" id="desc" cols="30" rows="10" class="form-control">{{desc}}</textarea>
                     </div>
-                    <div class="row col-12">
-                        <div class="form-group col-6">
-                            <label for="">Gasto Material</label>
-                            <input type="text" name="costProduce" id="costProduce" class="form-control"
-                                value="{{costProduce}}">
-                        </div>
-                        <div class="form-group col-6">
-                            <label for="">Valor Venda</label>
-                            <input type="text" name="value" id="value" class="form-control" value="{{value}}">
-                        </div>
+                </div>
+                <div class="row col-12">
+                    <div class="form-group col-6">
+                        <label for="">Gasto Material</label>
+                        <input type="text" name="costProduce" id="costProduce" class="form-control"
+                            value="{{costProduce}}">
                     </div>
-                    <div class="row col-12 mt-2">
-                        <div class="form-group col-12">
-                            <button class="btn btn-outline-success col-12">Enviar</button>
-                        </div>
+                    <div class="form-group col-6">
+                        <label for="">Valor Venda</label>
+                        <input type="text" name="value" id="value" class="form-control" value="{{value}}">
                     </div>
-                    {{/each}}
-                </form>
-            </div>
+                </div>
+                <div class="row col-12 mt-2">
+                    <div class="form-group col-12">
+                        <button class="btn btn-outline-success col-12">Enviar</button>
+                    </div>
+                </div>
+                {{/each}}
+            </form>
         </div>
     </div>
-</div>
 </div>
