--- a/src/views/menu/editar.hbs
+++ b/src/views/menu/editar.hbs
@@ -8,7 +8,7 @@
                     <div class="form-group col-12">
                         {{#each result}}
                         <input type="hidden" name="id" value="{{id}}">
-                        <input type="text" name="class" value="{{id}}{{class}}" class="form-control">
+                        <input type="text" name="class" value="{{class}}" class="form-control">
                     </div>
                 </div>
                 <div class="row col-12">
