--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -75,9 +75,9 @@
 
     <script src="/js/saudacoes.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-   <script type="text/javascript" src="/js/data.json"></script>
    <script type="text/javascript" src="/js/lucros.js"></script>
-   {{!-- <script type="text/javascript" src="/js/maisVendidos.js"></script> --}}
+   <script type="text/javascript" src="/js/maisVendidos.js"></script>
+    
 </body>
 
 </html>
