--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -17,7 +17,14 @@
                 <li class="active">
                     <a href="/"> <i class="menu-icon fa fa-dashboard"></i>Painel De Controle</a>
                 </li>
-                <h3 class="menu-title">Registros</h3><!-- /.menu-title -->
+                <h3 class="menu-title">Registros</h3>
+                <li class="menu-item-has-children dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false"> <i class="menu-icon fa fa-desktop"></i>Montar Pedido</a>
+                    <ul class="sub-menu children dropdown-menu">                  
+                        <li><i class="fa fa-table"></i><a href="/caixa">Montar Pedido</a></li>                        
+                    </ul>
+                </li> 
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Dados Empresa</a>
