--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -20,6 +20,45 @@
                             <label for="">Qtd</label>
                             <input type="text" name="" id="" class="form-control">
                         </div>
+                        <div class="form-group col-2 mt-2">
+                            <button class="btn btn-outline-dark mt-4">+</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <label for="">Cardápios</label>
+                            <select name="" id="" class="form-control">
+                                <option value="">Selecione</option>
+                                {{#each cardapios}}
+                                <option value="">{{class}}</option>
+                                {{/each}}
+                            </select>
+                        </div>
+                        <div class="form-group col-2">
+                            <label for="">Qtd</label>
+                            <input type="text" name="" id="" class="form-control">
+                        </div>
+                        <div class="form-group col-2 mt-2">
+                            <button class="btn btn-outline-dark mt-4">+</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <label for="">Cardápios</label>
+                            <select name="" id="" class="form-control">
+                                <option value="">Selecione</option>
+                                {{#each cardapios}}
+                                <option value="">{{class}}</option>
+                                {{/each}}
+                            </select>
+                        </div>
+                        <div class="form-group col-2">
+                            <label for="">Qtd</label>
+                            <input type="text" name="" id="" class="form-control">
+                        </div>
+                        <div class="form-group col-2 mt-2">
+                            <button class="btn btn-outline-dark mt-4">+</button>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-12">
