--- a/src/views/partials/_modalClient.hbs
+++ b/src/views/partials/_modalClient.hbs
@@ -24,33 +24,41 @@
                     </form>
                 </div>
                 <hr>
-                <form action="" method="post">
+                <form action="/caixa/registerUser" method="post">
                     <div class="row mt-3">
+                        <input type="hidden" name="id" value="{{clients.id}}">
                         <div class="form-group col-6">
                             <label for="" class="ml-2">Nome do Cliente</label>
-                            <input type="text" class="form-control ml-2" value="{{clients.name}}">
+                            <input type="text" name="name" class="form-control ml-2" value="{{clients.name}}">
                         </div>
                         <div class="form-group col-6">
                             <label for="" class="ml-2">Numero Telefone do Cliente</label>
-                            <input type="text" class="form-control ml-2" value="{{clients.telephone}}">
+                            <input type="text" name="telephone" class="form-control ml-2" value="{{clients.telephone}}">
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-5">
-                            <label for="" class="">Bairro</label>
-                            <input type="text" class="form-control " value="{{clients.neighborhood}}">
+                            <label for="" class="neighborhood">Bairro</label>
+                            <input type="text" name="" class="form-control " value="{{clients.neighborhood}}">
                         </div>
                         <div class="form-group col-7">
-                            <label for="" class="">Endereço</label>
-                            <input type="text" class="form-control " value="{{clients.address}}">
+                            <label for="" class="adress">Endereço</label>
+                            <input type="text" name="" class="form-control " value="{{clients.address}}">
                         </div>
                     </div>
-                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                <button type="button" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </div>
+            </form>
         </div>
     </div>
 </div>
+<script>
+    var select = document.getElementById('telephone')
+    select.addEventListener('change', e => {
+        var value = select.options[select.selectedIndex].value;
+        console.log(value);
+    })
+</script>
