--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -239,7 +239,7 @@
                     <div class="stat-icon dib"><i class="ti-user text-primary border-primary"></i></div>
                     <div class="stat-content dib">
                         <div class="stat-text">Em Atendimento</div>
-                        <div class="stat-digit" id="EmAtendimento">0</div>
+                        <div class="stat-digit" id="EmAtendimento">{{emAtendimento}}</div>
                     </div>
                 </div>
             </div>
