--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -72,7 +72,7 @@
         })(jQuery);
     </script>
 
-
+    <script src="/scripts/carregaCliente.js"></script>
     <script src="/js/saudacoes.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
    <script type="text/javascript" src="/js/lucros.js"></script>
