--- a/src/views/partials/_modalClient.hbs
+++ b/src/views/partials/_modalClient.hbs
@@ -28,21 +28,21 @@
                     <div class="row mt-3">
                         <div class="form-group col-6">
                             <label for="" class="ml-2">Nome do Cliente</label>
-                            <input type="text" class="form-control ml-2" value="{{clients.name}}">
+                            <input type="text" id="nomeDoCliente" class="form-control ml-2">
                         </div>
                         <div class="form-group col-6">
                             <label for="" class="ml-2">Numero Telefone do Cliente</label>
-                            <input type="text" class="form-control ml-2" value="{{clients.telephone}}">
+                            <input type="text" id="numeroTelefone" class="form-control ml-2">
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-5">
                             <label for="" class="">Bairro</label>
-                            <input type="text" class="form-control " value="{{clients.neighborhood}}">
+                            <input type="text" id="neighborhood" class="form-control">
                         </div>
                         <div class="form-group col-7">
                             <label for="" class="">Endereço</label>
-                            <input type="text" class="form-control " value="{{clients.address}}">
+                            <input type="text" id="addressClient" class="form-control ">
                         </div>
                     </div>
                 </form>
