--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -75,7 +75,7 @@
                 </div>
                 <div class="form-group col-3 mt-4 ml-5"
                     style="border: rgba(180, 179, 179, 0.281) 1px solid; min-height:500px; border-radius:5px; background-color: rgba(236, 236, 236, 0.418);">
-                    <h6 class="text-center mt-2">Comanda</h6>
+                    <h6 class="text-center mt-2">Carrinho de Compra</h6>
                     <hr>
                     <div class="row">
                         <div class="form-group ml-2">
