--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -6,14 +6,13 @@
             <hr>
             <div class="row mt-2">
                 <div class="form-group col-8">
+                    {{#each cardapios}}
                     <div class="row">
                         <div class="form-group col-6">
                             <label for="">Cardápios</label>
                             <select name="" id="" class="form-control">
                                 <option value="">Selecione</option>
-                                {{#each cardapios}}
                                 <option value="">{{class}}</option>
-                                {{/each}}
                             </select>
                         </div>
                         <div class="form-group col-2">
@@ -24,42 +23,7 @@
                             <button class="btn btn-outline-dark mt-4">+</button>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="form-group col-6">
-                            <label for="">Cardápios</label>
-                            <select name="" id="" class="form-control">
-                                <option value="">Selecione</option>
-                                {{#each cardapios}}
-                                <option value="">{{class}}</option>
-                                {{/each}}
-                            </select>
-                        </div>
-                        <div class="form-group col-2">
-                            <label for="">Qtd</label>
-                            <input type="text" name="" id="" class="form-control">
-                        </div>
-                        <div class="form-group col-2 mt-2">
-                            <button class="btn btn-outline-dark mt-4">+</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-6">
-                            <label for="">Cardápios</label>
-                            <select name="" id="" class="form-control">
-                                <option value="">Selecione</option>
-                                {{#each cardapios}}
-                                <option value="">{{class}}</option>
-                                {{/each}}
-                            </select>
-                        </div>
-                        <div class="form-group col-2">
-                            <label for="">Qtd</label>
-                            <input type="text" name="" id="" class="form-control">
-                        </div>
-                        <div class="form-group col-2 mt-2">
-                            <button class="btn btn-outline-dark mt-4">+</button>
-                        </div>
-                    </div>
+                    {{/each}}                    
                     <div class="row">
                         <div class="form-group col-12">
                             <label for="" class="ml-1">Observação</label>
@@ -90,11 +54,13 @@
                             <p>Total: </p>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-outline-dark col-12" data-toggle="modal" data-target="#MeuModal">
+                    <button type="submit" class="btn btn-outline-dark col-12" data-toggle="modal"
+                        data-target="#MeuModal">
                         Cliente
                     </button>
                     <form action="" method="post">
-                        <button class="btn btn-danger col-12 mt-2 " data-toggle="modal" data-target="#MeuModal">Finalizar Pedido</button>
+                        <button class="btn btn-danger col-12 mt-2 " data-toggle="modal"
+                            data-target="#MeuModal">Finalizar Pedido</button>
                     </form>
                 </div>
             </div>
