--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -6,13 +6,25 @@
             <hr>
             <div class="row mt-2">
                 <div class="form-group col-8">
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <label for="">Selecione uma classe do Cardápios</label>
+                            <select name="" id="" class="form-control">
+                                <option value="">Selecione uma classe</option>
+                                <option value=""></option>
+                            </select>
+                        </div>                        
+                        <div class="form-group col-2 mt-2">
+                            <button class="btn btn-outline-dark mt-4">PESQUISAR</button>
+                        </div>
+                    </div>
                     {{#each cardapios}}
                     <div class="row">
                         <div class="form-group col-6">
                             <label for="">Cardápios</label>
                             <select name="" id="" class="form-control">
                                 <option value="">Selecione</option>
-                                <option value="">{{class}}</option>
+                                <option value="">{{name}}</option>
                             </select>
                         </div>
                         <div class="form-group col-2">
