--- a/src/views/partials/_modalClient.hbs
+++ b/src/views/partials/_modalClient.hbs
@@ -21,7 +21,7 @@
                 <hr>
                 <form action="/caixa/registerUser" method="post">
                     <div class="row mt-3">
-                        <input type="hidden" name="id" value="{{clients.id}}">
+                        <input type="hidden" id="idUsuarios" name="id">
                         <div class="form-group col-6">
                             <label for="" class="ml-2">Nome do Cliente</label>
                             <input type="text" id="nomeDoCliente" class="form-control ml-2">
