--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -11,20 +11,21 @@
                             <label for="">Selecione uma classe do Cardápios</label>
                             <select name="" id="" class="form-control">
                                 <option value="">Selecione uma classe</option>
-                                <option value=""></option>
+                                {{#each cardapios}}
+                                <option value="{{class}}">{{class}}</option>
+                                {{/each}}
                             </select>
                         </div>                        
                         <div class="form-group col-2 mt-2">
                             <button class="btn btn-outline-dark mt-4">PESQUISAR</button>
                         </div>
                     </div>
-                    {{#each cardapios}}
                     <div class="row">
                         <div class="form-group col-6">
                             <label for="">Cardápios</label>
                             <select name="" id="" class="form-control">
                                 <option value="">Selecione</option>
-                                <option value="">{{name}}</option>
+                                <option value=""></option>
                             </select>
                         </div>
                         <div class="form-group col-2">
@@ -34,8 +35,7 @@
                         <div class="form-group col-2 mt-2">
                             <button class="btn btn-outline-dark mt-4">+</button>
                         </div>
-                    </div>
-                    {{/each}}                    
+                    </div>                   
                     <div class="row">
                         <div class="form-group col-12">
                             <label for="" class="ml-1">Observação</label>
