--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -12,7 +12,7 @@
                             <select name="" id="selectClassCardapio" class="form-control">
                                 <option value="">Selecione uma classe</option>
                                 {{#each cardapios}}
-                                <option value="{{class}}">{{class}}</option>
+                                <option value="{{class}}">{{maiuscula class}}</option>
                                 {{/each}}
                             </select>
                         </div>                        
@@ -38,7 +38,8 @@
                 <div class="form-group col-3 mt-4 ml-5"
                     style="border: rgba(180, 179, 179, 0.281) 1px solid; min-height:500px; border-radius:5px; background-color: rgba(236, 236, 236, 0.418);">
                     <h6 class="text-center mt-2">Carrinho de Compra</h6>
-                    <hr>
+                     <h6 class="text-center mt-2" id="clientCarrinho"></h6>
+                     <hr>
                     <div class="row">
                         <div class="form-group ml-2">
                             <p class="text-center ml-5">1x <strong>X-Tudo</strong> 18R$</p>
