--- a/src/views/partials/_modalClient.hbs
+++ b/src/views/partials/_modalClient.hbs
@@ -44,7 +44,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" id="enviarClient" class="btn btn-primary">Enviar</button>
             </div>
             </form>
         </div>
