--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -25,13 +25,13 @@
                     <div class="row">
                         <div class="form-group col-12">
                             <label for="" class="ml-1">Observação</label>
-                            <textarea name="" id="" cols="30" rows="10" class="form-control col-12 ml-2"
+                            <textarea  id="obsClienteCaixa" cols="30" rows="10" class="form-control col-12 ml-2"
                                 style="height: 100px;" style="background-color: rgba(236, 236, 236, 0.418);"></textarea>
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-12 mt-4 ml-2">
-                            <button class="btn btn-outline-dark col-12">Enviar Carrinho</button>
+                            <button class="btn btn-outline-dark col-12" id="enviaraoCarrinho">Enviar Carrinho</button>
                         </div>
                     </div>
                 </div>
